<resources>
    <string name="app_name">WordChai</string>
    <string name="LogIn">Log In</string>
    <string name="SignUp">Sign Up</string>
    <string name="logIntoMyAccount">LOG INTO MY ACCOUNT</string>
    <string name="CreateAccount">Create Account</string>
    <string name="LogOut">Log Out</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="BrowseUsers">Browse Users</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="CreateANewAccount">Create a New Account</string>
    <string name="LOGIN">logIn</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>


    <string-array name="languages">
        <item>English</item>
        <item>Persian</item>


    </string-array>

    <string-array name="Levels">
        <item>Elementary</item>
        <item>Intermediate</item>
        <item>Intermediate-Med</item>
        <item>Intermediate-Hi</item>
        <item>Advanced</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_status">Status</string>
    <string name="profile_name">Profile Name</string>
    <string name="change_image">VIEW PROFILE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="profileDiscription">About Me</string>
    <string name="updateProfile">UPDATE PROFILE</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="profileName">Profile Name</string>
    <string name="profileDefaultStatus">Profile Status</string>
    <string name="location">Location </string>
    <string name="Age">Age</string>
    <string name="Ponhe" />
    <string name="Phone">Phone</string>
    <string name="Interests">Interests</string>
    <string name="choose_language">Choose Language</string>
    <string name="select_level">Select Level:</string>
    <string name="selectSource">My Language:</string>
    <string name="selectTarget">Learn:</string>
    <string name="decksTxt">DECKS</string>
    <string name="load">LOAD</string>
    <string name="emptyTargetLang">(Empty)</string>
</resources>
