<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background3"

    tools:context=".RegisterActivity">

    <include layout ="@layout/app_bar_layout"
        android:id="@+id/regPageToolbar"/>


    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"

        android:text="@string/CreateAccount"
        android:textColor="@color/White"
        android:textColorHighlight="@color/Honeydew"
        tools:layout_editor_absoluteX="147dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/displayName"
        android:layout_above="@+id/logPassword"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:shadowColor="@color/White"
            android:shadowRadius="15" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logPassword"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/White"
            android:shadowRadius="15"
            android:layout_above="@+id/editText5"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="19dp"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="141dp">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/logPassword"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="31dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:shadowColor="@color/White"
            android:shadowRadius="15" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/langSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp" />

    <TextView
        android:id="@+id/LearnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="78dp"
        android:text="@string/choose_language" />


</RelativeLayout>
